bin/testsuite/tests/compiler/src/errors/compiler4946.swg
#global testerror "Err0669"

enum 0
{

}